--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "vitest run"
+    "test": "vitest run",
+    "build:sd": "node sd.config.js"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -45,6 +46,7 @@
     "eslint-plugin-testing-library": "^5.7.2",
     "jsdom": "^20.0.1",
     "prettier": "^2.7.1",
+    "style-dictionary": "^3.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vitest": "^0.24.3"
