--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-dictionary": "^3.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.2",
     "vitest": "^0.24.3"
   }
 }
