--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:sd": "node sd.config.js"
   },
   "dependencies": {
+    "@tanstack/react-location": "^3.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
