--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "vitest run",
-    "build:sd": "node sd.config.js"
+    "build:sd": "node sd.config.js",
+    "api:build": "aspida"
   },
   "dependencies": {
     "@tanstack/react-location": "^3.7.4",
+    "@tanstack/react-query": "^4.13.0",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
